<resources>
    <string name="app_name">My Application</string>

    <string name="texto1">Hello</string>
    <string name="texto2">Good bye</string>
    <string name="texto3">House</string>
    <string name="spinner">Ingrese elemento</string>


    <string name="hint_nombre">Ingrese calle</string>
    <string name="hint_ambientes">Ingrese cant. ambientes</string>
    <string name="hint_precio">Ingrese precio</string>
    <string name="check_dp">Departamento</string>
    <string name="button">Guardar</string>

    <string name="preference_file_key">misprefs</string>


</resources>
