<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="@dimen/margen_superior">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_nombre"
        android:hint="@string/hint_nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_ambientes"
        android:hint="@string/hint_ambientes" />

    <CheckBox
        android:text="@string/check_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox_dept" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_precio"
        android:hint="@string/hint_precio" />

    <Button
        android:text="@string/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_guardar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_ult" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_cantidad" />
</LinearLayout>